# ROS

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/ce30c_driver/: .catkin  .rosinstall  local_setup.sh
devel/.private/chats/: .catkin  setup.sh
devel/.private/diff_wheeled_robot_control/: .catkin  .rosinstall
devel/.private/diff_wheeled_robot_gazebo/: .catkin
devel/.private/donkey_car/: .catkin  .rosinstall  setup.sh
devel/.private/donkey_sonar/: .catkin  .rosinstall  local_setup.sh
devel/.private/holamundo/: .catkin  local_setup.sh  setup.sh
devel/.private/i2cpwm_board/: .catkin  .rosinstall  setup.sh
devel/.private/laser_scanner_tfmini/: .catkin  .rosinstall  local_setup.sh
devel/.private/mastering_ros_robot_description_pkg/: .catkin  .rosinstall  setup.sh
devel/.private/opencv/: .catkin  .rosinstall  local_setup.sh
devel/.private/practicas/: .catkin  local_setup.sh
devel/.private/repetidor/: .catkin  local_setup.sh
devel/.private/ros_essentials_cpp/: .catkin  .rosinstall  local_setup.sh
devel/.private/rosserial_arduino/: .catkin  local_setup.sh  setup.sh
devel/.private/rosserial_python/: .catkin  .rosinstall
devel/.private/rosserial_server/: .catkin
devel/.private/rviz_teleop_commander/: .catkin  .rosinstall
devel/.private/seven_dof_arm_config/: .catkin  local_setup.sh
devel/.private/seven_dof_arm_gazebo/: .catkin  .rosinstall
devel/.private/test_pub_sub/: .catkin  setup.sh
devel/.private/trabajo/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/turtlebot3_fake/: .catkin  .rosinstall  local_setup.sh
devel/.private/turtlebot3_gazebo/: .catkin  .rosinstall  local_setup.sh
devel/include/beginner_tutorials/: mensaje.h  tipo_servicio.h  tipo_servicioRequest.h  tipo_servicioResponse.h
devel/include/holamundo/: IoTSensor.h
devel/include/practicas/: mensajeTest.h  tipo_servicio.h  tipo_servicioRequest.h  tipo_servicioResponse.h
devel/include/raspicam_node/: CameraConfig.h
devel/include/ros_essentials_cpp/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h  IoTSensor.h
devel/include/rosserial_arduino/: Adc.h  Test.h  TestRequest.h  TestResponse.h
devel/include/test_pub_sub/: test_custom_msg.h
devel/include/trabajo/: inf_personal_usuario.h  multiplicador.h  multiplicadorRequest.h  multiplicadorResponse.h  pos_usuario.h  usuario.h
devel/lib/beginner_tutorials/: nodo_cliente  nodo_emisor  nodo_receptor  nodo_servidor
devel/lib/holamundo/: nodo_sub_iot2
devel/lib/pkgconfig/: beginner_tutorials.pc  catkin_tools_prebuild.pc  chats.pc  diff_wheeled_robot_control.pc  diff_wheeled_robot_gazebo.pc  donkey_car.pc  donkey_sonar.pc  holamundo.pc  laser_scanner_tfmini.pc  mastering_ros_robot_description_pkg.pc  opencv.pc  practicas.pc  raspicam_node.pc  repetidor.pc  ros_essentials_cpp.pc  rosserial_arduino.pc  rosserial_python.pc  rosserial_server.pc  rviz_teleop_commander.pc  seven_dof_arm_config.pc  seven_dof_arm_gazebo.pc  test_pub_sub.pc  trabajo.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc
devel/lib/practicas/: nodo_cliente  nodo_emisor  nodo_receptor  nodo_servidor
devel/lib/ros_essentials_cpp/: add_two_ints_client  add_two_ints_server  image_pub_sub_cpp  listener_node  open_copy_cpp  read_video_cpp  scan_subscriber_cpp  talker_node  turtlesim_clean_node
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/trabajo/: nodo_emocion_usuario  nodo_informacion_personal  nodo_pos_usuario  nodo_posicion_usuario
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
logs/beginner_tutorials/: build.make.000.log.stderr  build.make.001.log.stderr
logs/ce30c_driver/: build.make.000.log.stderr  build.make.001.log.stderr
logs/i2cpwm_board/: build.make.000.log.stderr
logs/practicas/: build.check.000.log.stderr  build.make.000.log.stderr
logs/repetidor/: build.check.000.log.stderr  build.check.004.log.stderr  build.check.006.log.stderr
logs/ros_essentials_cpp/: build.cmake.000.log.stderr
logs/rosserial_msgs/: build.cmake.000.log.stderr
logs/trabajo/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr
logs/turtlebot3_fake/: build.cmake.000.log.stderr
logs/turtlebot3_gazebo/: build.cmake.000.log.stderr
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  beginner_tutorials.cbp  cmake_install.cmake
src/beginner_tutorials-build/atomic_configure/: local_setup.sh  setup.sh
src/beginner_tutorials-build/devel/: .catkin  .rosinstall
src/chats/: CMakeLists.txt
src/chats/scripts/: user1.py  user2.py
src/diff_wheeled_robot_control/: CMakeLists.txt
src/holamundo/: CMakeLists.txt  package.xml
src/holamundo/msg/: IoTSensor.msg
src/holamundo/scripts/: iot_pub.py  iot_sub.py
src/holamundo/src/: iot_sub2.cpp
src/practicas/: CMakeLists.txt
src/practicas/launch/: practicas.launch
src/practicas/msg/: mensajeTest.msg
src/practicas/src/: nodo_cliente.cpp  nodo_emisor.cpp  nodo_receptor.cpp  nodo_servidor.cpp
src/practicas/srv/: tipo_servicio.srv
src/repetidor/: CMakeLists.txt
src/seven_dof_arm_gazebo/: gazebo_ros_control.gazebo
src/trabajo/: CMakeLists.txt  package.xml
src/trabajo/bagfiles/: myrosbag.bag
src/trabajo/msg/: inf_personal_usuario.msg  pos_usuario.msg
src/trabajo/scripts/: dialogo_nodo.py  informacion_personal_nodo.py  posicion_usuario_nodo.py  reloj_nodo.py
src/trabajo/scripts/launch/: trabajo.launch
src/trabajo/src/: dialogo_nodo.cpp  emocion_usuario_nodo.cpp  informacion_personal_nodo.cpp  posicion_usuario_nodo.cpp
(+444 files in other folders)
